@@ -12,8 +12,10 @@ t/Module-Info.t
 t/lib/Bar.pm
 t/lib/Baz.pm
 t/lib/Foo.pm
+t/lib/Moo.pm
 t/lib/Test/Builder.pm
 t/lib/Test/More.pm
 t/lib/Test/Simple.pm
 t/n0_die_on_error.t
 t/n1_modules_required.t
+t/n2_safe.t
