@@ -1,0 +1,6 @@
+package Moo;
+
+# potentially unsafe version assignment line
+use vars; $VERSION = '0.12';
+
+1;
